--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-feature-flipper",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "type": "module",
   "main": "./dist/react-feature-flipper.umd.cjs",
   "module": "./dist/react-feature-flipper.js",
@@ -15,9 +15,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsc && vite build",
+    "commit": "git-cz",
+    "semantic-release": "semantic-release --branches main"
   },
   "peerDependencies": {
     "react": "^18.2.0",
@@ -33,11 +35,13 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^23.2.0",
+    "semantic-release": "^23.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-plugin-dts": "^3.7.1",
@@ -69,5 +73,10 @@
     "feature-management",
     "configuration",
     "dynamic-features"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
