--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,3 +28,20 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm test
+
+  publish:
+    if: ${{ github.ref == 'refs/heads/main' }}
+    needs: [quality]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: "npm"
+      - run: npm ci
+      - run: npm run semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
