--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,10 +35,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 18.x
+      - name: Use latest Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: latest
           cache: "npm"
       - run: npm ci
       - run: npm run semantic-release
