--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "exports": {
     ".": {
       "import": "./dist/react-feature-flipper.js",
-      "require": "./dist/react-feature-flipper.umd.cjs"
+      "require": "./dist/react-feature-flipper.umd.cjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
@@ -34,6 +35,7 @@
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.56.0",
