--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/RabiRoshan/react-feature-flipper.git"
+    "url": "git+https://github.com/RabiRoshan/react-feature-flipper.git"
   },
   "keywords": [
     "react-feature-flipper",
